--- a/Network of Thrones.ipynb
+++ b/Network of Thrones.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -133,7 +133,7 @@
        "'IGRAPH UNW- 107 352 -- \\n+ attr: group (v), imageurl (v), indegree (v), label (v), name (v), outdegree (v), wiki (v), source_v (e), target_v (e), weight (e)'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -188,7 +188,7 @@
        "4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,9 +211,11 @@
     "editable": true
    },
    "source": [
-    "The edge betweenness algorithm finds fewer than the seven communities reported by the authors. We can try a more computationally intensive method, but note this network is close to the size limit of when this algorithm would apply. Heuristic methods like spinglass will get similar results for this type of undirected network in a fraction of the time.\n",
+    "The edge betweenness algorithm finds fewer than the seven communities reported by the authors. We could try a more computationally intensive method like optimal modularity, but this network is close to the limit of the number of vertices where this algorithm would apply. \n",
     "\n",
-    "https://en.wikipedia.org/wiki/Modularity_(networks)"
+    "https://en.wikipedia.org/wiki/Modularity_(networks)\n",
+    "\n",
+    "A heuristic method like spinglass will get a similar result for this type of undirected network in a fraction of the time."
    ]
   },
   {
@@ -226,49 +228,28 @@
    },
    "outputs": [],
    "source": [
-    "om_modules = g.community_optimal_modularity(weights='weight')"
+    "#om_modules = g.community_optimal_modularity(weights='weight')\n",
+    "#om_membership = om_modules.membership\n",
+    "#len(set(om_membership))\n",
+    "#=> 7"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "om_membership = om_modules.membership"
+    "clusters = g.community_spinglass(weights='weight')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(set(om_membership))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -277,7 +258,7 @@
    "outputs": [],
    "source": [
     "# Represent groups as Strings to avoid a mapping bug in py2cytoscape.\n",
-    "g.vs['group'] = list(map(lambda x: str(x), om_membership))"
+    "g.vs['group'] = list(map(lambda x: str(x), clusters.membership))"
    ]
   },
   {
@@ -292,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -305,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -328,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -341,7 +322,7 @@
      "text": [
       "{\n",
       "  \"apiVersion\": \"v1\",\n",
-      "  \"cytoscapeVersion\": \"3.4.0\"\n",
+      "  \"cytoscapeVersion\": \"3.5.1\"\n",
       "}\n"
      ]
     }
@@ -352,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -366,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -389,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -433,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -447,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -461,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -476,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -491,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -506,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -530,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -543,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -558,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -607,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -624,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -632,10 +613,139 @@
    },
    "outputs": [],
    "source": [
-    "style_for_js = cy.style.get(style.get_name(), data_format='cytoscapejs')\n",
+    "style_for_js = cy.style.get(style.get_name(), data_format='cytoscapejs')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Correct the background images:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def background_image(id, name):\n",
+    "    return {\"selector\": \"#{}\".format(id),\n",
+    "            \"css\": {\n",
+    "              \"background-image\": \"/img/{}.jpg\".format(name),\n",
+    "              \"background-fit\": \"contain\"\n",
+    "              }\n",
+    "            }\n",
+    "\n",
+    "\n",
+    "selectors = []\n",
+    "for v in net_view['elements']['nodes']:\n",
+    "    node = v['data']\n",
+    "    selectors.append(background_image(node['id'], node['name']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "style_for_js['style'] += selectors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Add in elements we need to support zooming and fading:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "additions = [{\n",
+    "        \"selector\": \"node.highlighted\",\n",
+    "        \"css\": {\n",
+    "          \"min-zoomed-font-size\": 0,\n",
+    "          \"z-index\": 9999\n",
+    "        }\n",
+    "      },\n",
+    "      {\n",
+    "        \"selector\": \"edge.highlighted\",\n",
+    "        \"css\": {\n",
+    "          \"opacity\": 0.8,\n",
+    "          \"width\": 4,\n",
+    "          \"z-index\": 9999\n",
+    "        }\n",
+    "      },\n",
+    "      {\n",
+    "        \"selector\": \".faded\",\n",
+    "        \"css\": {\n",
+    "          \"events\": \"no\",\n",
+    "          \"background-image-opacity\": 0.1\n",
+    "        }\n",
+    "      },\n",
+    "      {\n",
+    "        \"selector\": \"node.faded\",\n",
+    "        \"css\": {\n",
+    "          \"opacity\": 0.08\n",
+    "        }\n",
+    "      },\n",
+    "      {\n",
+    "        \"selector\": \"edge.faded\",\n",
+    "        \"css\": {\n",
+    "          \"opacity\": 0.06\n",
+    "        }\n",
+    "      },\n",
+    "      {\n",
+    "        \"selector\": \".hidden\",\n",
+    "        \"css\": {\n",
+    "          \"display\": \"none\"\n",
+    "        }\n",
+    "      }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "style_for_js['style'] += additions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "with open('./output/got.style.json', 'w') as out:\n",
     "    json.dump(style_for_js, out, indent=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
