Fix an issue where cytoscape exports string format for doubles

--- a/Network of Thrones.ipynb
+++ b/Network of Thrones.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -727,8 +727,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fix an issue where cytoscape exports string format for doubles:**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "string_bug_fix = [{'css': {'font-size': 32}, 'selector': 'node[betweenness > 1166.15]'},\n",
+    "    {'css': {'font-size': 32}, 'selector': 'node[betweenness = 1166.15]'},\n",
+    "    {'css': {'font-size': 'mapData(betweenness,0,1166.15,14,32)'},\n",
+    "     'selector': 'node[betweenness > 0][betweenness < 1166.15]'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "style_for_js['style'] += string_bug_fix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
