Update about docs

--- a/Network of Thrones.ipynb
+++ b/Network of Thrones.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -133,7 +133,7 @@
        "'IGRAPH UNW- 107 352 -- \\n+ attr: group (v), imageurl (v), indegree (v), label (v), name (v), outdegree (v), wiki (v), source_v (e), target_v (e), weight (e)'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -188,7 +188,7 @@
        "4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,14 +213,12 @@
    "source": [
     "The edge betweenness algorithm finds fewer than the seven communities reported by the authors. We could try a more computationally intensive method like optimal modularity, but this network is close to the limit of the number of vertices where this algorithm would apply. \n",
     "\n",
-    "https://en.wikipedia.org/wiki/Modularity_(networks)\n",
-    "\n",
-    "A heuristic method like spinglass will get a similar result for this type of undirected network in a fraction of the time."
+    "https://en.wikipedia.org/wiki/Modularity_(networks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -235,8 +233,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A heuristic method like spinglass will get a similar result for this type of undirected network in a fraction of the time. Spinglass is a stochastic method, so we'll use a hack to get a predetermined number of clusters that matches that found in the study. This wouldn't make sense in an exploratory analysis!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -244,12 +249,15 @@
    },
    "outputs": [],
    "source": [
-    "clusters = g.community_spinglass(weights='weight')"
+    "num_clusters = 0\n",
+    "while (num_clusters != 7):\n",
+    "    clusters = g.community_spinglass(weights='weight')\n",
+    "    num_clusters = len(set(clusters.membership))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -273,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -286,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -309,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -333,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -347,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -370,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -408,13 +416,36 @@
     "    'NETWORK_BACKGROUND_PAINT': c.DARK_GRAY\n",
     "}\n",
     "\n",
-    "style = cy.style.create('GoT')\n",
+    "style_name = 'GoT'\n",
+    "style = cy.style.create(style_name)\n",
     "style.update_defaults(settings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app.lock_node_width_and_height(style_name, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -428,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -442,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -457,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -467,12 +498,13 @@
    "source": [
     "# scale vertex size according to PageRank value.\n",
     "pr_to_size = su.create_slope(min=min(g.vs['pagerank']), max=max(g.vs['pagerank']), values=(25, 125))\n",
-    "style.create_continuous_mapping(column='pagerank', vp='NODE_SIZE', col_type='Double', points=pr_to_size)"
+    "style.create_continuous_mapping(column='pagerank', vp='NODE_HEIGHT', col_type='Double', points=pr_to_size)\n",
+    "style.create_continuous_mapping(column='pagerank', vp='NODE_WIDTH', col_type='Double', points=pr_to_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -487,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -511,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -524,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -539,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -565,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -588,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -605,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -625,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -648,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -666,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -717,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -735,21 +767,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "string_bug_fix = [{'css': {'font-size': 32}, 'selector': 'node[betweenness > 1166.15]'},\n",
-    "    {'css': {'font-size': 32}, 'selector': 'node[betweenness = 1166.15]'},\n",
+    "string_bug_fix = [\n",
+    "    {'css': {'font-size': 32}, \n",
+    "     'selector': 'node[betweenness > 1166.15]'},\n",
+    "    {'css': {'font-size': 32}, \n",
+    "     'selector': 'node[betweenness = 1166.15]'},\n",
     "    {'css': {'font-size': 'mapData(betweenness,0,1166.15,14,32)'},\n",
     "     'selector': 'node[betweenness > 0][betweenness < 1166.15]'}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -759,8 +794,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Write the final style**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -769,15 +811,6 @@
     "with open('./output/got.style.json', 'w') as out:\n",
     "    json.dump(style_for_js, out, indent=2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
