Add in normalized ranks to ease attribute comparisons.

--- a/Network of Thrones.ipynb
+++ b/Network of Thrones.ipynb
@@ -211,53 +211,40 @@
     "editable": true
    },
    "source": [
-    "The edge betweenness algorithm finds fewer than the seven communities reported by the authors. We could try a more computationally intensive method like optimal modularity, but this network is close to the limit of the number of vertices where this algorithm would apply. \n",
+    "The Girvan-Newman edge betweenness community detection algorithm finds fewer than the seven communities reported by Beveridge et al in the original paper. We could try a more computationally intensive method like optimal modularity, but this network is close to the limit of the number of vertices where this algorithm would apply. \n",
     "\n",
-    "https://en.wikipedia.org/wiki/Modularity_(networks)"
+    "A heuristic method like `spinglass` will get a similar result for this type of undirected network in a fraction of the time, but will likely come up with a slightly different number of communities and membership than will `optimal_modularity`. See https://en.wikipedia.org/wiki/Modularity_(networks)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "#om_modules = g.community_optimal_modularity(weights='weight')\n",
-    "#om_membership = om_modules.membership\n",
-    "#len(set(om_membership))\n",
-    "#=> 7"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A heuristic method like spinglass will get a similar result for this type of undirected network in a fraction of the time. Spinglass is a stochastic method, so we'll use a hack to get a predetermined number of clusters that matches that found in the study. This wouldn't make sense in an exploratory analysis!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_clusters = 0\n",
-    "while (num_clusters != 7):\n",
-    "    clusters = g.community_spinglass(weights='weight')\n",
-    "    num_clusters = len(set(clusters.membership))"
+    "om_modules = g.community_optimal_modularity(weights='weight')\n",
+    "om_membership = om_modules.membership\n",
+    "len(set(om_membership))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -266,7 +253,7 @@
    "outputs": [],
    "source": [
     "# Represent groups as Strings to avoid a mapping bug in py2cytoscape.\n",
-    "g.vs['group'] = list(map(lambda x: str(x), clusters.membership))"
+    "g.vs['group'] = list(map(lambda x: str(x), om_membership))"
    ]
   },
   {
@@ -281,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -294,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -303,6 +290,61 @@
    "outputs": [],
    "source": [
     "g.vs['betweenness'] = g.betweenness(directed=False, weights='weight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def ordinal(n):\n",
+    "    \"\"\"Crazy: https://stackoverflow.com/a/20007730\"\"\"\n",
+    "    return \"%d%s\" % (n,\"tsnrhtdd\"[(n//10%10!=1)*(n%10<4)*n%10::4])\n",
+    "\n",
+    "\n",
+    "def ranks(entries):\n",
+    "    \"\"\"Given a list of Numeric entries, returns a list of the ranks of each entry.\"\"\"\n",
+    "    seq = sorted(entries)\n",
+    "    n = len(entries)\n",
+    "    return [ordinal(n - seq.index(x)) for x in entries]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "g.vs['pr_rank'] = ranks(g.vs['pagerank'])\n",
+    "g.vs['bc_rank'] = ranks(g.vs['betweenness'])\n",
+    "g.vs['dc_rank'] = ranks(g.vs['indegree'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "igraph.Vertex(<igraph.Graph object at 0x111116138>, 98, {'name': 'Tyrion', 'imageurl': 'https://d1l1fon1fdqzt1.cloudfront.net/img/Tyrion.jpg', 'wiki': 'http://gameofthrones.wikia.com/wiki/Tyrion_Lannister', 'indegree': 36, 'outdegree': 36, 'label': 'Tyrion', 'group': '2', 'pagerank': 0.05545693845369458, 'betweenness': 1163.7833333333333, 'pr_rank': '1st', 'bc_rank': '2nd', 'dc_rank': '1st'})"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.vs[g.vs['pr_rank'].index(\"1st\")]"
    ]
   },
   {
@@ -317,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -341,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -355,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -378,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -423,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -434,7 +476,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -459,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -473,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -488,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -504,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 100,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -519,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -543,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -556,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -571,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -597,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -620,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -637,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -657,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -680,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -698,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
@@ -749,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -767,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -784,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
@@ -802,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
