Increase font and image sizes

--- a/Network of Thrones.ipynb
+++ b/Network of Thrones.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -294,9 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -314,9 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -327,18 +331,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "igraph.Vertex(<igraph.Graph object at 0x111116138>, 98, {'name': 'Tyrion', 'imageurl': 'https://d1l1fon1fdqzt1.cloudfront.net/img/Tyrion.jpg', 'wiki': 'http://gameofthrones.wikia.com/wiki/Tyrion_Lannister', 'indegree': 36, 'outdegree': 36, 'label': 'Tyrion', 'group': '2', 'pagerank': 0.05545693845369458, 'betweenness': 1163.7833333333333, 'pr_rank': '1st', 'bc_rank': '2nd', 'dc_rank': '1st'})"
+       "igraph.Vertex(<igraph.Graph object at 0x10e378138>, 98, {'name': 'Tyrion', 'imageurl': 'https://d1l1fon1fdqzt1.cloudfront.net/img/Tyrion.jpg', 'wiki': 'http://gameofthrones.wikia.com/wiki/Tyrion_Lannister', 'indegree': 36, 'outdegree': 36, 'label': 'Tyrion', 'group': '2', 'pagerank': 0.05545693845369458, 'betweenness': 1163.7833333333333, 'pr_rank': '1st', 'bc_rank': '2nd', 'dc_rank': '1st'})"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -383,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -397,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -420,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -465,29 +471,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "app.lock_node_width_and_height(style_name, False)"
+    "# app.lock_node_width_and_height(style_name, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -501,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -515,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -530,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -539,14 +536,14 @@
    "outputs": [],
    "source": [
     "# scale vertex size according to PageRank value.\n",
-    "pr_to_size = su.create_slope(min=min(g.vs['pagerank']), max=max(g.vs['pagerank']), values=(25, 125))\n",
+    "pr_to_size = su.create_slope(min=min(g.vs['pagerank']), max=max(g.vs['pagerank']), values=(35, 150))\n",
     "style.create_continuous_mapping(column='pagerank', vp='NODE_HEIGHT', col_type='Double', points=pr_to_size)\n",
     "style.create_continuous_mapping(column='pagerank', vp='NODE_WIDTH', col_type='Double', points=pr_to_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -555,13 +552,13 @@
    "outputs": [],
    "source": [
     "# The size of its label corresponds to its betweenness centrality.\n",
-    "bc_to_size = su.create_slope(min=min(g.vs['betweenness']), max=max(g.vs['betweenness']), values=(14, 32))\n",
+    "bc_to_size = su.create_slope(min=min(g.vs['betweenness']), max=max(g.vs['betweenness']), values=(16, 52))\n",
     "style.create_continuous_mapping(column='betweenness', col_type='Double', vp='NODE_LABEL_FONT_SIZE', points=bc_to_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -585,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -598,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -613,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -662,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -679,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -692,16 +689,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Correct the background images:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -722,9 +724,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -733,16 +737,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Add in elements we need to support zooming and fading:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -793,7 +802,9 @@
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -802,33 +813,40 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Fix an issue where cytoscape exports string format for doubles:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "string_bug_fix = [\n",
-    "    {'css': {'font-size': 32}, \n",
+    "    {'css': {'font-size': 52}, \n",
     "     'selector': 'node[betweenness > 1166.15]'},\n",
-    "    {'css': {'font-size': 32}, \n",
+    "    {'css': {'font-size': 52}, \n",
     "     'selector': 'node[betweenness = 1166.15]'},\n",
-    "    {'css': {'font-size': 'mapData(betweenness,0,1166.15,14,32)'},\n",
+    "    {'css': {'font-size': 'mapData(betweenness,0,1166.15,16,52)'},\n",
     "     'selector': 'node[betweenness > 0][betweenness < 1166.15]'}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -837,22 +855,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Write the final style**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "with open('./output/got.style.json', 'w') as out:\n",
     "    json.dump(style_for_js, out, indent=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
